style/main.css
@import url("https://fonts.googleapis.com/css2?family=Chicle&display=swap");

:root {
  --primary-bg: #fcf6bd;
  --secondary: #ff99c8;
  --white: #fffef1;
  --peach: #fcab31;
  --darkPeach: #363635;
  --postitDefault: #d6c5ef;
  --black: #000000;
  --darkmodePrimary: #363627ed;
  --leaderboard: #fcd7ff;
}

/* DARK MODE STYLING */
body.dark {
  background-color: #363627ed;
}

body.dark h1 {
  color: var(--white);
}

body.dark p {
    color: var(--white);
}

body.dark .post-it p {
  color: var(--black);
}

body.dark #guidelines p {
  color: var(--black);
}

/* bara la style för att se var darkmode knappen ska vara */
.dark-mode {
  width: 1rem;
  height: 2.5rem;
  background: none;
  border: none;
  cursor: pointer;
  position: relative;
  padding: 0;
}

.dark-mode::before,
.dark-mode::after {
  content: "";
  position: absolute;
  width: 20px;
  height: 35px;
  background-color: #ff1493;
  border-radius: 20px 20px 0 0;
  top: 0;
}

.dark-mode::before {
  left: 20px;
  transform: rotate(-45deg);
  transform-origin: 0 100%;
}

.dark-mode::after {
  left: 1px;
  transform: rotate(45deg);
  transform-origin: 100% 100%;
}

/* Hover effect */
.dark-mode:hover::before,
.dark-mode:hover::after {
  background-color: #ff69b4;
  transform-origin: 0 100%;
}

.dark-mode:hover::after {
  transform: rotate(45deg);
  transform-origin: 100% 100%;
}

/* Active effect */
.dark-mode:active::before,
.dark-mode:active::after {
  background-color: #c71585;
}
/* BASE STYLING */
body {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  background-color: var(--primary-bg);
  min-height: 100vh;
  font-family: chicle;
  text-align: center;
}

main {
  flex: 1;
}

a {
  text-decoration: none;
  color: var(--peach);
}

button {
    background-color: var(--secondary);
    font-family: chicle;
    border: var(--peach) solid 5px;
    border-radius: 5px;
    margin: 10px;
}

/* GLOBAL CARD STYLE */
.card {
  background-color: var(--white);
  border: 6px solid var(--peach);
  border-radius: 30px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
}

/* NAVIGATION BAR */
header {
  padding: 0.5rem;
  display: flex;
  flex-direction: row;
  height: 3rem;
}

.logo {
  width: 16rem;
}

.desktop-nav {
  display: none;
}

/* Dropdown menu */
.mobile-nav {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.dropdown-btn {
  background: none;
  border: none;
  display: flex;
  align-items: center;
}

.dropdown-content {
  display: none;
  position: absolute;
  right: 0;
  top: 100%;
  min-width: 6rem;
  gap: 0.5rem;
  padding: 0.5rem;
  background-color: var(--white);
  z-index: 1000;
}

.dropdown-content.active {
  display: flex !important;
  flex-direction: column;
  align-items: center;
}

/* Main title */
.page-title {
  margin: 0;
  display: flex;
  align-self: center;
}

/* Footer */
footer {
  padding: 0.5rem;
  background-color: var(--peach);
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

#foot-sec2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 1rem;
}

/* =================
Desktop styling 
================== */

@media (min-width: 1024px) {
  header {
    justify-content: center;
    padding: 1rem;
  }

  .logo {
    width: 25rem;
  }

  .desktop-nav {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 3rem;
  }

  .desktop-nav a:hover {
    font-size: 1.2rem;
    color: var(--secondary);
  }

  .mobile-nav {
    display: none !important;
  }

}

